# api/services/products_menus/swagger.json
@@ -5,7 +5,7 @@
 	],
 	"definitions": {
 		"IProduct": {
-			"description": "Product objects allow merchants to show their available\nmeals/dessert/... for sale",
+			"description": "Product objects allow merchants to show their available\r\nmeals/dessert/... for sale",
 			"properties": {
 				"id": {
 					"type": "string",
@@ -27,18 +27,20 @@
 				"price": {
 					"type": "number",
 					"format": "double",
-					"description": "Price in euros (€)"
+					"description": "Price in euros (€)",
+					"x-nullable": true
 				},
 				"available": {
 					"type": "boolean",
 					"description": "Is the product currently available ?"
 				},
 				"ingredients": {
+					"type": "array",
 					"items": {
 						"type": "string"
 					},
-					"type": "array",
-					"description": "Ingredients list composing product"
+					"description": "Ingredients list composing product",
+					"x-nullable": true
 				}
 			},
 			"required": [
@@ -48,18 +50,30 @@
 				"restaurant_id",
 				"available"
 			],
-			"type": "object",
-			"additionalProperties": true
+			"type": "object"
 		},
-		"Pick_IProduct.Exclude_keyofIProduct.id__": {
+		"ProductCreationParams": {
+			"properties": {},
+			"type": "object"
+		},
+		"ProductUpdateParams": {
+			"properties": {},
+			"type": "object"
+		},
+		"IMenu": {
+			"description": "Menu objects allow merchants to show their available\r\nmenus for sale",
 			"properties": {
+				"id": {
+					"type": "string",
+					"description": "Uniq indentifier"
+				},
 				"name": {
 					"type": "string",
-					"description": "Name which represent the product"
+					"description": "Name which represent the menu"
 				},
 				"description": {
 					"type": "string",
-					"description": "Short text describing the product"
+					"description": "Short text describing the menu"
 				},
 				"restaurant_id": {
 					"type": "number",
@@ -69,73 +83,35 @@
 				"price": {
 					"type": "number",
 					"format": "double",
-					"description": "Price in euros (€)"
+					"description": "Price in euros (€)",
+					"x-nullable": true
 				},
 				"available": {
 					"type": "boolean",
-					"description": "Is the product currently available ?"
+					"description": "Is the menu currently available ?"
 				},
-				"ingredients": {
-					"items": {
-						"type": "string"
-					},
-					"type": "array",
-					"description": "Ingredients list composing product"
+				"products": {
+					"type": "object",
+					"description": "Products contained on the menu\r\nTODO",
+					"x-nullable": true
 				}
 			},
 			"required": [
+				"id",
 				"name",
 				"description",
 				"restaurant_id",
 				"available"
 			],
-			"type": "object",
-			"description": "From T, pick a set of properties whose keys are in the union K"
+			"type": "object"
 		},
-		"Omit_IProduct.id_": {
-			"$ref": "#/definitions/Pick_IProduct.Exclude_keyofIProduct.id__",
-			"description": "Construct a type with the properties of T except for those in type K."
+		"MenuCreationParams": {
+			"properties": {},
+			"type": "object"
 		},
-		"ProductCreationParams": {
-			"$ref": "#/definitions/Omit_IProduct.id_"
-		},
-		"Partial_Omit_IProduct.id__": {
-			"properties": {
-				"name": {
-					"type": "string",
-					"description": "Name which represent the product"
-				},
-				"description": {
-					"type": "string",
-					"description": "Short text describing the product"
-				},
-				"restaurant_id": {
-					"type": "number",
-					"format": "double",
-					"description": "Restaurant uniq indentifier reference"
-				},
-				"price": {
-					"type": "number",
-					"format": "double",
-					"description": "Price in euros (€)"
-				},
-				"available": {
-					"type": "boolean",
-					"description": "Is the product currently available ?"
-				},
-				"ingredients": {
-					"items": {
-						"type": "string"
-					},
-					"type": "array",
-					"description": "Ingredients list composing product"
-				}
-			},
-			"type": "object",
-			"description": "Make all properties in T optional"
-		},
-		"ProductUpdateParams": {
-			"$ref": "#/definitions/Partial_Omit_IProduct.id__"
+		"MenuUpdateParams": {
+			"properties": {},
+			"type": "object"
 		}
 	},
 	"info": {
@@ -143,9 +119,6 @@
 		"version": "1.0.0",
 		"license": {
 			"name": "ISC"
-		},
-		"contact": {
-			"name": "Antoine M"
 		}
 	},
 	"paths": {
@@ -159,10 +132,10 @@
 					"200": {
 						"description": "Ok",
 						"schema": {
+							"type": "array",
 							"items": {
 								"$ref": "#/definitions/IProduct"
-							},
-							"type": "array"
+							}
 						}
 					}
 				},
@@ -217,7 +190,7 @@
 						}
 					}
 				},
-				"description": "Retrieves the details of an existing product.\nSupply the unique product ID from either and receive corresponding product details.",
+				"description": "Retrieves the details of an existing product.\r\nSupply the unique product ID from either and receive corresponding product details.",
 				"summary": "Retrieves a specific existing product",
 				"tags": [
 					"Products"
@@ -287,6 +260,152 @@
 				"parameters": [
 					{
 						"description": "The product's identifier",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"type": "string"
+					}
+				]
+			}
+		},
+		"/menus": {
+			"get": {
+				"operationId": "GetAll",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/IMenu"
+							}
+						}
+					}
+				},
+				"description": "Retrieves all existing menus.",
+				"summary": "Retrieves all existing menus",
+				"tags": [
+					"Menus"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "Create",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Create a new menu by supplying new menu's data",
+				"summary": "Create a new menu",
+				"tags": [
+					"Menus"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The new menu's data",
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/MenuCreationParams"
+						}
+					}
+				]
+			}
+		},
+		"/menus/{id}": {
+			"get": {
+				"operationId": "Get",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/IMenu"
+						}
+					}
+				},
+				"description": "Retrieves the details of an existing menu.\r\nSupply the unique menu ID from either and receive corresponding menu details.",
+				"summary": "Retrieves a specific existing menu",
+				"tags": [
+					"Menus"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The menu's identifier",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"type": "string"
+					}
+				]
+			},
+			"put": {
+				"operationId": "Update",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Update specific menu from the unique menu ID you provide in query, with the new data you provide in body.",
+				"summary": "Update an existing menu",
+				"tags": [
+					"Menus"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The menu's identifier",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"description": "The new menu's data",
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/MenuUpdateParams"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "Remove",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Delete a specific menu from the unique menu ID you provide.",
+				"summary": "Delete a menu",
+				"tags": [
+					"Menus"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The menu's identifier",
 						"in": "path",
 						"name": "id",
 						"required": true,
